<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_userface_parent"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/user_userface_width"
        android:layout_height="@dimen/user_userface_height"
        android:paddingLeft="15dp"
        android:paddingRight="5dp" >

        <ImageView
            android:id="@+id/img_mine_userface"
            android:layout_width="@dimen/user_userface_width"
            android:layout_height="@dimen/user_userface_height"
            android:src="@drawable/ic_user_app_face"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_user_app_face_opacity"/>

        <ImageView
            android:layout_marginBottom="15dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/btn_user_app_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_user_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_userface_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        android:textColor="@color/textColorPrimary" />

    <TextView
        android:id="@+id/tv_user_login_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_user_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        android:text="@string/mine_go_to_login"
        android:textColor="@color/textColorSecondary" />

    <TextView
        android:layout_marginBottom="70dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:id="@+id/tv_user_register"
        android:gravity="center"
        android:text="@string/register"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        android:background="@drawable/shape_btn_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_above="@id/tv_user_register"
        android:padding="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:id="@+id/tv_user_login"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:background="@drawable/shape_btn_bule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
