<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_read_bottom_brightness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="@dimen/app_padding">

        <TextView
            android:id="@+id/tv_read_brightness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/app_padding"
            android:text="@string/pop_bottom_brightness"
            android:textColor="@color/textColorTitle" />

        <ImageView
            android:id="@+id/tv_read_brightness_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:src="@drawable/ic_read_dark" />

        <SeekBar
            android:id="@+id/seek_bar_brightness"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:max="255"
            android:progress="150"
            android:progressBackgroundTint="@color/textColorEnable"
            android:thumb="@drawable/seek_bar_thumb"
            android:thumbOffset="0dp" />

        <ImageView
            android:id="@+id/tv_read_brightness_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_read_light" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_read_bottom_aa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="@dimen/app_padding">

        <TextView
            android:id="@+id/tv_read_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/app_padding"
            android:text="@string/pop_bottom_textsize"
            android:textColor="@color/textColorTitle" />

        <TextView
            android:id="@+id/tv_read_text_size_down"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bottom_text"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/text_size_down"
            android:textColor="@color/color_read_bottom_text" />

        <TextView
            android:id="@+id/tv_read_text_size_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bottom_text"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/text_size_up"
            android:textColor="@color/color_read_bottom_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_read_bottom_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="@dimen/app_padding" >

        <TextView
            android:id="@+id/tv_read_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/app_padding"
            android:layout_gravity="center_vertical"
            android:text="颜色"
            android:textColor="@color/textColorTitle" />

        <ImageButton
            android:id="@+id/imb_read_bg_white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:src="@drawable/selector_read_bg_white" />

        <ImageButton
            android:id="@+id/imb_read_bg_yellow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:src="@drawable/selector_read_bg_yellow" />

        <ImageButton
            android:id="@+id/imb_read_bg_green"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:src="@drawable/selector_read_bg_green" />

        <ImageButton
            android:id="@+id/imb_read_bg_blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:src="@drawable/selector_read_bg_blue" />

        <ImageButton
            android:id="@+id/imb_read_bg_night"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:src="@drawable/selector_read_bg_night" />
    </LinearLayout>

</LinearLayout>
